2002-11-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/ByteArrayOutputStream: created directory for adding
	complete method tests for class

2002-11-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedStream/Test.java: Added available() to
	complete method tests for PipedInputStream

2002-11-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedReaderWriter/PipedTestWriter.java: Added flush() to
	complete method tests for PipedWriter

2002-11-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedReaderWriter/Test.java: Added close() to
	complete method tests for PipedReader

2002-11-23  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java: New base
	class to make gcj native code linking happy.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: extend Base.
	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: Likewise.

2002-11-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: New test.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: Make reusable.

	* gnu/testlet/java/net/URL/URLTest.java: Add sanity checks and debug.

2002-11-21  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedCharWriter:
	Renamed to BufferedWriter to match classname
	* gnu/testlet/java/io/BufferedWriter/Test.java:
	Changed package name accordingly.

2002-11-21  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedOutputStream/interrupt.java:
	* gnu/testlet/java/io/BufferedOutputStream/helper.java:
	* gnu/testlet/java/io/BufferedOutputStream/Test.java:
	Corrected package names in each source file;
	Fixed date on ChangeLog entry immediately below	

2002-11-21  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedOutputByteStream:
	Renamed directory to BufferedOutputStream to match classname

2002-11-20  Stephen Crawley <crawley@dstc.edu.au>