@@ -1,0 +1,76 @@
+// Tags: JDK1.1
+
+// Copyright (C) 2002 Free Software Foundation, Inc.
+// Written by Daryl Lee (dolee@sources.redhat.com)
+// Modified from FileOutputStream/write.java,
+//     written by Mark Wielaard (mark@klomp.org)
+
+// This file is part of Mauve.
+
+// Mauve is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2, or (at your option)
+// any later version.
+
+// Mauve is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with Mauve; see the file COPYING.  If not, write to
+// the Free Software Foundation, 59 Temple Place - Suite 330,
+// Boston, MA 02111-1307, USA.  */
+
+package gnu.testlet.java.io.ByteArrayOutputStream;
+
+import java.io.ByteArrayOutputStream;
+import java.io.UnsupportedEncodingException;
+import java.io.IOException;
+
+import gnu.testlet.Testlet;
+import gnu.testlet.TestHarness;
+
+public class write implements Testlet
+{
+  public void test (TestHarness harness)
+  {
+	ByteArrayOutputStream baos = new ByteArrayOutputStream();
+	ByteArrayOutputStream baos2 = new ByteArrayOutputStream();
+	byte[] ba = {(byte)'B', (byte)'C', (byte)'D'};
+	String tststr = "ABCD";
+	baos.write('A');
+	harness.check(true, "write(int)");
+	baos.write(ba, 0, 3);
+	harness.check(true, "write(buf, off, len)");
+	harness.check(baos.size(), 4, "size()");
+	String finalstr1 = baos.toString();
+	harness.check(finalstr1.equals(tststr), "toString()");
+	byte[] finalba = baos.toByteArray();
+	String finalstr2 = new String(finalba);
+	harness.check(finalstr2.equals(tststr), "toByteArray()");
+	String encodedstr;
+	try {
+		encodedstr = baos.toString("English");
+	}
+	catch (UnsupportedEncodingException ue) {
+		harness.check(true, "UnsupportedEncodingException");
+	}
+	try {
+		encodedstr = baos.toString("8859_1");
+		harness.check(encodedstr.equals(tststr), "toString(String)");
+	}
+	catch (UnsupportedEncodingException ue) {
+		harness.check(false, "Encoding error");
+	}
+	try {
+		baos.writeTo(baos2);
+		harness.check(baos2.toString().equals(tststr), "writeTo(OutputStream)");
+	}
+	catch (IOException e) {
+		harness.check(false, "writeTo(OutputStream)");
+	}
+	baos.reset();
+	harness.check(baos.size(), 0, "reset()");
+  }
+}
