@@ -1,4 +1,8 @@
 2002-11-24  Daryl Lee <dol@sources.redhat.com>
+	* gnu/testlet/java/io/ByteArrayOutputStream/write.java: complete 
+	method tests for class
+
+2002-11-24  Daryl Lee <dol@sources.redhat.com>
 	* gnu/testlet/java/io/ByteArrayOutputStream: created directory for adding
 	complete method tests for class
 
